--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -10,14 +10,9 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :user %><br>
-    <%= f.number_field :user %>
-  </div>
   <div class="field">
     <%= f.label :date %><br>
-    <%= f.text_field :date %>
+    <%= f.date_select :date %>
   </div>
   <div class="field">
     <%= f.label :note %><br>
