Cleaned up nav-bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,10 @@
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
   </head>
   <body>
-
+<div class="row">
 <%= render 'layouts/header' %>
+</div>
 <div class="container">
-
 <%= yield %>
 </div>
   </body>
