--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
 <%= render 'layouts/header' %>
 </div>
 <div class="container">
+<% flash.each do |key, value| %> 
+  <div class="alert alert-<%= key %>"><%= value %></div>
+<% end %>
 <%= yield %>
 </div>
   </body>
