--- a/app/views/list_items/new.html.erb
+++ b/app/views/list_items/new.html.erb
@@ -1,5 +1,14 @@
-<h1>New list_item</h1>
+<div class="row">
+  <div class="col-md-3">
+  </div>
+  <div class="col-md-6">
+    <%= render 'form' %>
+  </div>
+  <div class="col-md-6">
 
-<%= render 'form' %>
+  </div>
+</div>
+
+
 
 <%= link_to 'Back', list_items_path %>
