--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,12 @@
 <h1>New list</h1>
-
-<%= render 'form' %>
+<div class="row">
+  <div class="col-md-3">
+  </div>
+  <div class="col-md-6">
+    <%= render 'form' %>
+  </div>
+  <div class="col-md-6">
+  </div>
+</div>
 
 <%= link_to 'Back', lists_path %>
