--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -14,7 +14,8 @@
       <tr>
         <td><%= list.date %></td>
         <td><%= list.note %></td>
-        <td><%= link_to 'Show & Add Items', list %></td>
+        <td><%= link_to 'Show List', list %></td>
+        <td><%= link_to 'Add Items', '/item/'+list.id.to_s%></td>
         <td><%= link_to 'Edit Note', edit_list_path(list) %></td>
         <td><%= link_to 'Delete List', list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
