--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -12,7 +12,7 @@
   <tbody>
     <% @lists.each do |list| %>
       <tr>
-        <td><%= list.date %></td>
+        <td><%= list.created_at %></td>
         <td><%= list.note %></td>
         <td><%= link_to 'Show List', list %></td>
         <td><%= link_to 'Add Items', '/item/'+list.id.to_s%></td>
