--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,21 +14,16 @@
         <ul class="nav navbar-nav">
           <li class="active"><%= link_to "Home", root_path, id: "logo" %></span></li>
         </ul>
-        <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+       
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">LIst Menu <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><%= link_to "Create List", '/lists/new'%></li>
-              <li><%= link_to "View Lists", '/lists'%></li>
               <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
+              <li><%= link_to "View Lists", '/lists'%></li>
+
             </ul>
           </li>
         </ul>
