Tidied up homepage

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Home') %> <h1>You Forgot The List</h1>
-<p>
+<% provide(:title, 'Home') %> 
+<h1>You Forgot The List</h1>
+
 	<h3>Go to the menu to add items</h3>
-</p>
