--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">LIst Menu <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">List Menu <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><%= link_to "Create List", '/lists/new'%></li>
               <li class="divider"></li>
