--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,10 @@
 <% provide(:title, 'Home') %> 
-<h1>You Forgot The List</h1>
+<div class="row">
+	<div class = "col-md-4"></div>
+	<div class = "col-md-4">
+		<h1>You Forgot The List</h1>
 <h3>Go to the menu to add items</h3>
+	</div>
+	<div class = "col-md-4"></div>
+</div>
+
