--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -20,12 +20,13 @@ pre {
 
 a {
   color: #000;
+  padding: 3px;
   &:visited {
     color: #666;
   }
   &:hover {
-    color: #fff;
-    background-color: #000;
+    color: #aaa;
+    background-color: #fff;
   }
 }
 
