--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -19,13 +19,13 @@ pre {
 }
 
 a {
-  -moz-border-radius: 15px;
-  border-radius: 15px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
   color: #fff;
-  padding: 3px;
-  background-color: #444;
+  padding: 6px;
+  background-color: #888;
   &:visited {
-    color: #666;
+    color: #ddd;
   }
   &:hover {
     color: #aaa;
