--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,13 +16,13 @@
         </ul>
        
         <ul class="nav navbar-nav navbar-right">
-          <li ><%= link_to "Sign out", signout_path, method: "delete" id: "nav_buttons"%></li>
+          <li ><%= link_to "Sign out", signout_path, method: "delete", id: "nav_buttons"%></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" id= "nav_buttons">List Menu <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li ><%= link_to "Create List", '/lists/new' id: "nav_buttons"%></li>
+              <li ><%= link_to "Create List", '/lists/new', id: "nav_buttons"%></li>
               <li class="divider"></li>
-              <li><%= link_to "View Lists", '/lists' id: "nav_buttons"%></li>
+              <li><%= link_to "View Lists", '/lists', id: "nav_buttons"%></li>
 
             </ul>
           </li>
