--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,30 +1,77 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <strong>User:</strong>
-  <%= @list.user.f_name %> <%= @list.user.s_name %> 
-</p>
 
-<p>
-  <strong>Date:</strong>
-  <%= @list.created_at %>
-</p>
+<% if signed_in? %>
+  <div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-3"> 
+      <p>
+      <strong>User:</strong>
+      <%= @list.user.f_name %> <%= @list.user.s_name %> 
+      </p>
+    </div>
+    <div class="col-md-3">
+      <p>
+        <strong>Date:</strong>
+        <%= @list.created_at.to_s(:short) %>
+      </p>
+    </div>
+    <div class="col-md-4">
+      <p>
+      <strong>Note:</strong>
+      <%= @list.note %>
+      </p>
+    </div>
+    <div class="col-md-1"></div>
+  </div>
+  <p id="notice"><%= notice %></p>
+  <div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-2">
+      <strong>List Items</strong>
+    </div>
+    <div class="col-md-5"></div>
+  </div>
+    <% @list_items.each do |i|%>
 
-<p>
-  <strong>Note:</strong>
-  <%= @list.note %>
-</p>
-
-<p>
-	<strong>List Items</strong>
-  <% @list_items.each do |i|%>
-   <p>
-    <span>Quantity: <%= i.quantity %></span> |
-    <span>Item: <%= i.name%></span>
-   </p>
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-3">
+      <p>
+        Quantity: <%= i.quantity %>
+      </p> 
+    </div>
+    <div class="col-md-3">
+      <p>
+        Item: <%= i.name%>
+      </p>
+    </div>
+    <div class="col-md-3"></div>
+  </div>
   <% end %>
 
-</p>
-<%= link_to 'Add Items', '/item/'+@list.id.to_s%> |
-<%= link_to 'Edit Note', edit_list_path(@list) %> |
-<%= link_to 'Back', lists_path %>
+  <div class="row">
+
+    <div class="col-md-2">
+
+    </div>
+    <div class="col-md-3">
+      <p>
+        <%= link_to 'Add Items', '/item/'+@list.id.to_s%> 
+      </p> 
+    </div>
+    <div class="col-md-3">
+      <p>
+        <%= link_to 'Edit Note', edit_list_path(@list) %>
+      </p>
+    </div>
+    <div class="col-md-3">
+      <p>
+        <%= link_to 'Back', lists_path %>
+      </p>
+    </div>
+  </div>
+
+<% else %>
+  <h4>You must <%= link_to "Sign in", signin_path %> to see this page</h4>
+<% end %>
+
