--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>F name:</strong>
+  <strong>First name:</strong>
   <%= @user.f_name %>
 </p>
 
 <p>
-  <strong>S name:</strong>
+  <strong>Last name:</strong>
   <%= @user.s_name %>
 </p>
 
